Cập nhật code mới đã sửa logic chấm công, sửa cách tính lương, cơ bản hoàn thiện 2/11/2025

--- a/frontend/public/bao-cao-luong.html
+++ b/frontend/public/bao-cao-luong.html
@@ -68,7 +68,7 @@
             <tr>
               <th style="width: 70px">NV ID</th>
               <th>Họ tên</th>
-              <th>Lương cơ bản</th>
+              <th>Lương thỏa thuận</th>
               <th>Phụ cấp</th>
               <th>Thưởng</th>
               <th>Khác</th>
